[gd_scene load_steps=4 format=3 uid="uid://dtxxtcv05u5kd"]

[ext_resource type="Script" path="res://scripts/inventory/bullet.gd" id="1_fxo6e"]
[ext_resource type="Texture2D" uid="uid://cj72d6anblh4t" path="res://sprites/items/item_spawnables/gun_bullet.png" id="2_32fjp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7l4i"]
size = Vector2(8, 4)

[node name="bullet" type="Node2D"]
texture_filter = 1
script = ExtResource("1_fxo6e")

[node name="main_body" type="Node2D" parent="."]

[node name="main_body_2" type="Node2D" parent="main_body"]

[node name="Area2D" type="Area2D" parent="main_body/main_body_2"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/main_body_2/Area2D"]
shape = SubResource("RectangleShape2D_u7l4i")

[node name="GunBullet" type="Sprite2D" parent="main_body/main_body_2"]
texture = ExtResource("2_32fjp")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="main_body/main_body_2/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
